Refactor application properties for environment variable support and add delete application endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Discord Bot Configuration
-discord.bot.token=YOUR_DISCORD_BOT_TOKEN_HERE
+discord.bot.token=${DISCORD_BOT_TOKEN}
 
 # Portainer Configuration
-portainer.url=http://localhost:9000
-portainer.username=admin
-portainer.password=your_portainer_password
+portainer.url=${PORTAINER_URL}
+portainer.username=${PORTAINER_USERNAME}
+portainer.password=${PORTAINER_PASSWORD}
 
 # Server Configuration
 server.port=8080
