Add container management features with Discord integration and auto-stop functionality

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version> <!-- Prüfe ggf. auf die neueste Version -->
+            <scope>provided</scope>
+        </dependency>
+
+
 
         <dependency>
             <groupId>me.paulschwarz</groupId>
