--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ portainer.username=${PORTAINER_USERNAME}
 portainer.password=${PORTAINER_PASSWORD}
 
 # Server Configuration
-server.port=8080
+server.port=12346
 
 # Database Configuration (H2 für lokale Entwicklung)
 spring.datasource.url=jdbc:h2:file:/DATA/StartStoppBotDc/database/startstoppbot
@@ -24,6 +24,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # H2 Console (für Entwicklung/Debug)
 spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
+
 
 # Logging Configuration
 logging.level.com.example.startstoppbot=INFO
@@ -42,3 +43,8 @@ spring.application.name=StartStopp Discord Bot
 info.app.name=StartStopp Discord Bot
 info.app.description=Discord Bot für Container-Management über Portainer
 info.app.version=1.0.0
+
+#Scheduler Configuration
+scheduler.auto-stop.enabled=true
+scheduler.auto-stop.inactivity-minutes=30
+scheduler.auto-stop.check-players=true
