Implement Docker service integration and update Discord command handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ portainer.url=${PORTAINER_URL}
 portainer.username=${PORTAINER_USERNAME}
 portainer.password=${PORTAINER_PASSWORD}
 
+#docker API Configuration
+docker.host=${DOCKER_API_URL}
+docker.api.version=${DOCKER_API_VERSION}
+
 # Server Configuration
 server.port=12346
 
